@@ -4,6 +4,9 @@ This file describes the changes to the Log for C++ library. See the CVS reposito
 	* include/log4cpp/SimpleConfigurator.hh, src/SimpleConfigurator.cpp:
 	added configure(std::istream&) method. (feature request #527760)
 
+	* src/Log4cppCleanup.cpp: set variable to NULL after delete. 
+	(feature request #527393)
+ 
 2002-03-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* tests/testbench.cpp: added missing 'std::' specifiers. (bug #530332)
 
